--- a/style.css
+++ b/style.css
@@ -60,3 +60,43 @@ header {
 .navbar a:hover {
   background-color: #555;
 }
+
+.rightbar {
+  position: absolute;
+  left: 90%;
+  transform: translateX(-50%);
+}
+
+.rightbar ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+}
+
+.rightbar li {
+  margin: 0 15px;
+}
+
+.rightbar a:hover {
+  background-color: #555;
+}
+
+.rightbar a {
+  color: #fff;
+  text-decoration: none;
+  padding: 5px 10px;
+  border-radius: 5px;
+  transition: background-color 0.3s;
+  color: black;
+}
+
+.rightbar a:hover {
+  background-color: #555;
+}
+
+.bar {
+  position: absolute;
+  left: 97%;
+  transform: translateX(-50%);
+}
